Fix alignments

--- a/src/send-mail-template/send-mail-template.component.scss
+++ b/src/send-mail-template/send-mail-template.component.scss
@@ -14,9 +14,16 @@ $main-color: #e91e63;
     flex-direction: row;
 }
 
+:host {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    height: 100%;
+}
+
 .templates-container {
     @include flex-vertically-centered();
-    flex-grow: 1;
     width: 100%;
     height: 420px;
     background-color: #e91e63;
@@ -37,5 +44,18 @@ $main-color: #e91e63;
                 transform: scale(1.05);
             }
         }
+    }
+}
+
+.email-container {
+    @include flex-horizontally-centered();
+    margin: auto;
+
+    .email {
+        display: flex;
+    }
+
+    .add-recipient {
+        display: flex;
     }
 }
